Closed Bug 537946 Opened 15 years ago Closed 15 years ago

DC leaked in vista tooltip/panel theming code

Categories

(Core :: Widget: Win32, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- final-fixed

People

(Reporter: jimm, Assigned: jimm)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
The patch addresses a dc leak I introduced on vista and up related to themeing of tooltips and panels. (Hat tip to roc who found it.) This is a safe fix we could take in a point release.
Attachment #420096 - Flags: review?(roc)
(The original patch landed on 1.9.2.)
Flags: blocking1.9.2?
Flags: blocking1.9.2?
http://hg.mozilla.org/mozilla-central/rev/512c359fa6b9
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/ad9800a009e9
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: