Bug 537946 - DC leaked in vista tooltip/panel theming code. r=roc.